--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,10 @@ matrix:
           python: 3.3
           env: TOXENV=py33
         - os: osx
-          language: generic
+          language: python
           env: TOXENV=py32
         - os: osx
-          language: generic
+          language: python
           env: TOXENV=py33
 install:
     - ./.travis/install.sh
