--- a/.travis.yml
+++ b/.travis.yml
@@ -13,16 +13,16 @@ python:
 # command to install dependencies in the requirements file
 # You can also install the coverage here to avoid it being in the requirements file
 # It is important to avoid things like coverage, pep8 that are not required to run the app
-install:
-  - pip install -r requirements.txt
-  - pip install coverage
+#install:
+ # - pip install -r requirements.txt
+ # - pip install coverage
 
 
 # command to run tests
 # This is the script that enables travis to run the tests
 # There are many ways to do dependeing on how you want travis to run and get you coverage
-script: true
-  - nosetests --with-coverage --coverage report
+#script: true
+#  - nosetests --with-coverage --coverage report
 
  # Another command/method to run tests
 script:
@@ -32,9 +32,9 @@ script:
 # Note that travis will build your system and get the coverage.
 # It cannot display, therefore coveralls becomes important to get the coverage
 # You can also use after_success
-after_script:
-  - coveralls
+#after_script:
+#  - coveralls
 
 # Using codecov to get coverage
-after_success:
-  - codecov
+#after_success:
+#  - codecov
