--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ python:
 
  # Another command/method to run tests
 script:
-  - pytest
+  - python3 cards.py
 
 # This returns the coverage and let's coveralls know the coverage percent.
 # Note that travis will build your system and get the coverage.
