--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ python:
   - 3.6
 matrix:
   include:
-    - python: 3.6  #- python: 3.7
+    - python: 3.7  
       dist: xenial
-      sudo: true
+      sudo: false # sudo: true
 
 os: osx
 
